--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -42,17 +42,17 @@
 		</div>
   </div>
 <!-- Modal -->
-	<div class="modal fade small" id="DatatypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal fade small" id="PosttypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h6 class="modal-title" id="datatypeModalTitle"></h6>
+					<h6 class="modal-title" id="posttypeModalTitle"></h6>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<form method="post" action="" id="createDatatype" enctype="multipart/form-data">
-				<div id="DatatypeModalBody" class="modal-body" >
+				<form method="post" action="" id="createPosttype" enctype="multipart/form-data">
+				<div id="PosttypeModalBody" class="modal-body" >
 					{% csrf_token %}
 					{{form.as_p }}
 				</div>
