--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -56,6 +56,8 @@
 					{% csrf_token %}
 					{{form.as_p }}
 				</div>
+				<div id="PosttypeResult" class="modal-body" >
+				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary small" data-dismiss="modal">Close</button>
 					<button type="submit" class="btn btn-primary small">Create</button>
