--- a/mystream/streampage/templates/modalPost.html
+++ b/mystream/streampage/templates/modalPost.html
@@ -16,8 +16,8 @@
 		<div class="col-sm-2">
 			<table>
 				<tr>
-					<td><button type="button" updateClass="true" id ="SavePrimitiveButton" class="btn btn-outline-primary"><i class="fa fa-save" style="font-size:24px"></i></button></td>
-					<td><button type="button" deleteClass="true" id ="SavePrimitiveButton" class="btn btn-outline-secondary"><i class="fa fa-window-close" style="font-size:24px" aria-hidden="true"></i></button></td>
+					<td><button type="button" updateClass="true" id ="SavePrimitiveButton" class="btn btn-sm btn-outline-primary"><i class="fa fa-save" style="font-size:24px"></i></button></td>
+					<td><button type="button" deleteClass="true" id ="SavePrimitiveButton" class="btn btn-sm  btn-outline-secondary"><i class="fa fa-window-close" style="font-size:24px" aria-hidden="true"></i></button></td>
 				</tr>
 			</table>
 		</div>
@@ -25,8 +25,8 @@
 		<div class="col-sm-2">
 			<table>
 				<tr>
-					<td><button type="button" updateClass="true" id ="SavePrimitiveButton" class="btn btn-outline-primary"><i class="fa fa-save" style="font-size:24px"></i></button></td>
-					<td><button type="button" deleteClass="true" id ="SavePrimitiveButton" class="btn btn-outline-secondary"><i class="fa fa-window-close" aria-hidden="true" style="font-size:24px"></i></button></td>
+					<td><button type="button" updateClass="true" id ="SavePrimitiveButton" class="btn btn-sm  btn-outline-primary"><i class="fa fa-save" style="font-size:24px"></i></button></td>
+					<td><button type="button" deleteClass="true" id ="SavePrimitiveButton" class="btn btn-sm  btn-outline-secondary"><i class="fa fa-window-close" aria-hidden="true" style="font-size:24px"></i></button></td>
 				</tr>
 			</table>
 		</div>
