--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -52,17 +52,21 @@
 					</button>
 				</div>
 				<form method="post" action="" id="createPosttype" enctype="multipart/form-data">
-				<div id="PosttypeModalBody" class="modal-body" >
-					{% csrf_token %}
-					{{form.as_p }}
+					<div id="PosttypeModalBody" class="modal-body" >
+						{% csrf_token %}
+						{{form.as_p }}
+					</div>
+				</form>
+				<div id="editPosttypeButton" class="modal-body p-3">
+					<button type="button" id="createPosttypeButton" class="btn btn-sm btn-primary small"><i class="fa fa-save small" aria-hidden="true"></i> Save Definition</button>
 				</div>
 				<div id="PosttypeResult" class="modal-body" >
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary small" data-dismiss="modal">Close</button>
-					<button type="submit" class="btn btn-primary small">Create</button>
+				<div id="footerAddPosttype" class="modal-footer justify-content-between">
+					<div></div>
+					<button type="button" class="btn btn-sm btn-secondary small" data-dismiss="modal">Close</button>
 				</div>
-				</form>
+				
 			</div>
 		</div>
 	</div>
