--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -273,6 +273,7 @@ $( document ).ready(function() {
 		event.preventDefault();
 		var data = new FormData($('#'+ selectedID).get(0));
 		var posttypeHash = document.getElementById(selectedID).getAttribute("hash");
+		data.append('CommunityHash', '{{community_Hash}}');
 		data.append('DatatypeHash', posttypeHash);
 		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
 		$.ajax({
@@ -286,7 +287,7 @@ $( document ).ready(function() {
 			success: function(data, textStatus, jqXHR){
 				alert(data)
 				if (data.trim() == "Data is saved!"){
-					$( "button[id="+this.idval+"][updateClass='true']" ).html( '<i class="fa fa-check-circle" style="font-size:24px"></i>' );
+					$( "button[id="+this.idval+"][updateClass='true']" ).html( '<i class="fa fa-edit small" style="font-size:24px"></i>' );
 				}
 			}		
 		});
@@ -297,7 +298,8 @@ $( document ).ready(function() {
 		event.preventDefault();
 		var data = new FormData($('#'+ selectedID).get(0));
 		var posttypeHash = document.getElementById(selectedID).getAttribute("hash");
-		data.append('DatatypeHash', posttypeHash);
+		data.append('CommunityHash', '{{ Community_Name.0.communityHash}}');
+		data.append('DatatypeHash', '{{ Datatype_Name.0.datatypeHash }}');
 		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
 		$.ajax({
 			type:'POST',
@@ -322,8 +324,8 @@ $( document ).ready(function() {
 		selectedID=$(this).attr('id');
 		event.preventDefault();
 		var data = new FormData($('#'+ selectedID).get(0));
-		var posttypeHash = document.getElementById(selectedID).getAttribute("hash");
-		data.append('DatatypeHash', posttypeHash);
+		data.append('CommunityHash', '{{ Community_Name.0.communityHash}}');
+		data.append('DatatypeHash', '{{ Datatype_Name.0.datatypeHash }}');
 		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
 		$.ajax({
 			type:'POST',
@@ -344,6 +346,7 @@ $( document ).ready(function() {
 	$(document).on ("click", "[deleteClass]", function (event) {
 		selectedID=$(this).attr('id');
 		jQuery('#'+selectedID).remove();
+
     });
 	
 	$(document).on ("click", "#Add_Post", function (event) {
